--- a/trout.html
+++ b/trout.html
@@ -15,11 +15,15 @@
   </head>
   <body>
     <h1>Welcome to The Rainbow Trout Company's Homepage!</h1>
-    <img class="cat-fish" src="/static/cat_fish.jpg" alt="the cat fish photo" style="height: 300px">
-    <p>Our favorite links:</p>
+    <img src="/static/cat.jpg" alt="the cat photo" style="height: 300px">
+    <p>Our favorite restaurants:</p>
     <ul>
-      <li><a href="https://www.google.com/search?q=cat">cat</a></li>
-      <li><a href="https://en.wikipedia.org/wiki/Portland,_Oregon">Portland, OR</a></li>
-    </ul>
+  <li><a href="https://maps.app.goo.gl/yML9Jeqyqh3B9YA47">Dynasty Seafood Restaurant</a></li>
+  <li><a href="https://maps.app.goo.gl/ZfEVEKE53qSSYZEX7">Lao Cai Chinese Cuisine West Van 老蔡食府 西温店</a></li>
+  <li><a href="https://maps.app.goo.gl/x5B3CiFPX5Li6s218">Chef's Choice Seafood Restaurant</a></li>
+  <li><a href="https://maps.app.goo.gl/3MehAmM81bUsHFqZ8">The First Dessert</a></li>
+  <li><a href="https://maps.app.goo.gl/CTjTmZ2EbbeRd7hu9">HK BBQ Master</a></li>
+  <li><a href="https://maps.app.goo.gl/ZqxagdVTPrUu4G1R6">Landmark Hotpot House</a></li>
+</ul>
   </body>
 </html>
